syntax = "proto3";

package service;
option go_package = "https://github.com/suvihanninen/examSubmission.git;service";


service DistService {
    rpc Add (AddRequest) returns (AddResponse) {}
    rpc Read(ReadRequest)returns (ReadResponse){}
    rpc GetHeartBeat(BeatRequest)returns (BeatAck){}
}

message BeatRequest {
    string message = 1;
}

message BeatAck {
    string port = 1;

}

message AddRequest {
   string word = 1;
   string definition = 2;
}

message AddResponse {
    bool ack = 1; 
   
}

message ReadRequest {
    string word = 1;
    
}

message ReadResponse {
    string definition = 1; 
   
}
